# market_average_Lifespan-Quant

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  README.md  pyproject.toml  tst_2010_2019_report.txt
.windsurf/rules/: project-discipline.md
.windsurf/workflows/: run-governance.md  run-tests.md
docs/: README.md
docs/01-design/: 00-system-overview-20260401.md  00-system-overview-20260404.md  01-system-architecture-20260331.md  01-system-architecture-20260404.md  README.md
docs/02-spec/: 01-data-contracts-20260331.md  README.md
docs/03-execution/: 001-data-full-pipeline-bootstrap-card-20260404.md  002-006-persistence-pipeline-conclusion-20260407.md  002-malf-persistence-bootstrap-card-20260406.md  003-structure-persistence-bootstrap-card-20260406.md  004-filter-persistence-bootstrap-card-20260406.md  005-research-lab-persistence-bootstrap-card-20260406.md  006-trade-runtime-persistence-bootstrap-card-20260406.md  007-malf-end-to-end-validation-card-20260406.md  008-bof-bull-mainstream-three-year-validation-card-20260406.md  009-structure-bof-joint-validation-card-20260406.md  010-filter-adverse-condition-evaluation-card-20260406.md  011-tst-independent-validation-card-20260406.md  012-cpb-semantic-convergence-validation-card-20260406.md  013-first-pb-hypothesis-validation-card-20260406.md  014-l2-backward-adjust-sampling-validation-card-20260406.md  015-unit-test-adjust-factor-card-20260406.md  015-unit-test-adjust-factor-conclusion-20260408.md  016-malf-four-context-lifecycle-contract-reset-card-20260407.md  README.md  (+11 more)
src/lq/: __init__.py
(+232 files in other folders)
