[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "lifespan-quant"
version = "0.1.0"
description = "市场平均寿命量化系统 — A-share research system built on Market Average Lifespan Framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mootdx>=0.13.0",
    "duckdb>=1.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
]
audit = [
    "tushare>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lq"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=H:/Lifespan-temp/lq/pytest/default"

[tool.ruff]
line-length = 100
target-version = "py310"
